# pruner

./: .gitignore  AGENTS.template.md  CLAUDE.md  CLAUDE.template.md  COPILOT.template.hook.md  COPILOT.template.skill.md  Cargo.toml  Makefile  README.md  TODO.md  install.ps1  install.sh  pyproject.toml
.claude/hooks/: pruner-context.sh
.claude/skills/pruner/: SKILL.hook.md  SKILL.md  SKILL.skill.md
.codex/hooks/: pruner-context.sh
.codex/skills/pruner/: SKILL.md
.copilot/hooks/: pruner-context.json  pruner-context.ps1  pruner-context.sh
.copilot/skills/pruner/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: budget.rs  cli.rs  context.rs  db.rs  import_resolver.rs  indexer.rs  languages.rs  main.rs  parser.rs  query.rs  synonyms.rs  tokens.rs  uninstall.rs  upgrade.rs
src/parser/: c.rs  common.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs
src/pruner/: __init__.py  cli.py  context.py  db.py  indexer.py  languages.py  parser.py  query.py  tokens.py
tests/: ab_test.py  ab_test_copilot.py  bench.rs  bench_baseline.json  bench_results.json  integration.rs  miss_categorization.py  posthoc_analysis.py  test_ab_test.py  test_context.py  test_db.py  test_indexer.py  test_languages.py  test_parser.py  test_posthoc_analysis.py  test_query.py  test_tokens.py
tests/ab-tests/: analyze_cache_bias.py  cache_bias_report.txt  fast_implement_n10.json  fast_implement_n10_analysis.txt  fast_interactive_n10.json  fast_interactive_n10_v027.json  fast_oneshot_n5.json  fast_oneshot_n5_analysis.txt  opus_openclaw_oneshot_n3_v027_20260406.json  results.json  results_multi_repo.json  sonnet_nest_oneshot_n10_v027_20260406.json
tests/fixtures/c_project/src/: auth.c  auth.h  main.c  user.c  user.h
tests/fixtures/c_project/tests/: test_auth.c
tests/fixtures/cpp_project/src/: auth_service.cpp  auth_service.hpp  main.cpp  user.hpp
tests/fixtures/cpp_project/tests/: auth_test.cpp
tests/fixtures/csharp_project/src/: Program.cs
tests/fixtures/csharp_project/src/Handlers/: AuthHandler.cs
tests/fixtures/csharp_project/src/Models/: User.cs
tests/fixtures/csharp_project/src/Repositories/: UserRepository.cs
tests/fixtures/csharp_project/tests/: AuthHandlerTests.cs
tests/fixtures/go_service/: main.go
tests/fixtures/go_service/handlers/: auth.go
tests/fixtures/go_service/handlers_test/: auth_test.go
tests/fixtures/go_service/models/: user.go
tests/fixtures/java_project/src/main/com/example/: App.java
tests/fixtures/java_project/src/main/com/example/handlers/: AuthHandler.java
tests/fixtures/java_project/src/main/com/example/models/: User.java  UserRepository.java
tests/fixtures/python_webapp/: models.py  routes.py  services.py
tests/fixtures/python_webapp/tests/: test_services.py
tests/fixtures/rust_crate/src/: db.rs  main.rs  server.rs
tests/fixtures/ts_package/api/: handler.test.ts  handler.ts
tests/fixtures/ts_package/lib/: auth.ts  db.ts
(+1 files in other folders)
