[package]
name = "pruner"
version = "0.2.7"
edition = "2024"
description = "Synthetic code context engine for LLM coding tasks"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
walkdir = "2"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
anyhow = "1"
dirs = "6"
ureq = { version = "3", features = ["json"] }
flate2 = "1"
tar = "0.4"
zip = "2"
self-replace = "1"
tempfile = "3"
rayon = "1.11.0"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
rust-stemmers = "1.2.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
