[project]
name = "pruner"
version = "0.1.0"
description = "Synthetic code context engine for LLM coding tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-rust>=0.24",
]

[project.scripts]
pruner = "pruner.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pruner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
